--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,13 @@
     padding: 0px;
     box-sizing: border-box;
     text-decoration: none;    
+    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+}
+body {
+    background-color: #112D4E;
+    color: #F9F7F7;
 }
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+a {
+    color: #F9F7F7;
 }
